--- a/pmEvent/en.lproj/MainMenu.xib
+++ b/pmEvent/en.lproj/MainMenu.xib
@@ -1698,23 +1698,24 @@
 												<string key="NSKeyEquivalent"/>
 												<int key="NSPeriodicDelay">400</int>
 												<int key="NSPeriodicInterval">75</int>
-												<nil key="NSMenuItem"/>
+												<object class="NSMenuItem" key="NSMenuItem" id="1067315917">
+													<reference key="NSMenu" ref="920042590"/>
+													<string key="NSTitle">Item 1</string>
+													<string key="NSKeyEquiv"/>
+													<int key="NSKeyEquivModMask">1048576</int>
+													<int key="NSMnemonicLoc">2147483647</int>
+													<int key="NSState">1</int>
+													<reference key="NSOnImage" ref="35465992"/>
+													<reference key="NSMixedImage" ref="502551668"/>
+													<string key="NSAction">_popUpItemAction:</string>
+													<reference key="NSTarget" ref="913065961"/>
+												</object>
 												<bool key="NSMenuItemRespectAlignment">YES</bool>
 												<object class="NSMenu" key="NSMenu" id="920042590">
 													<string key="NSTitle">OtherViews</string>
 													<object class="NSMutableArray" key="NSMenuItems">
 														<bool key="EncodedWithXMLCoder">YES</bool>
-														<object class="NSMenuItem" id="1067315917">
-															<reference key="NSMenu" ref="920042590"/>
-															<string key="NSTitle">Item 1</string>
-															<string key="NSKeyEquiv"/>
-															<int key="NSKeyEquivModMask">1048576</int>
-															<int key="NSMnemonicLoc">2147483647</int>
-															<reference key="NSOnImage" ref="35465992"/>
-															<reference key="NSMixedImage" ref="502551668"/>
-															<string key="NSAction">_popUpItemAction:</string>
-															<reference key="NSTarget" ref="913065961"/>
-														</object>
+														<reference ref="1067315917"/>
 														<object class="NSMenuItem" id="665207670">
 															<reference key="NSMenu" ref="920042590"/>
 															<string key="NSTitle">Item 2</string>
@@ -2278,7 +2279,7 @@
 									<reference key="NSNextKeyView" ref="130735854"/>
 									<reference key="NSTarget" ref="723335052"/>
 									<string key="NSAction">_doScroller:</string>
-									<double key="NSPercent">0.9859154929577465</double>
+									<double key="NSPercent">0.7857142857142857</double>
 								</object>
 								<object class="NSScroller" id="130735854">
 									<reference key="NSNextResponder" ref="723335052"/>
@@ -2287,10 +2288,11 @@
 									<reference key="NSSuperview" ref="723335052"/>
 									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="479307446"/>
+									<bool key="NSEnabled">YES</bool>
 									<int key="NSsFlags">1</int>
 									<reference key="NSTarget" ref="723335052"/>
 									<string key="NSAction">_doScroller:</string>
-									<double key="NSPercent">0.99749373433583954</double>
+									<double key="NSPercent">0.99251870324189528</double>
 								</object>
 								<object class="NSClipView" id="662942643">
 									<reference key="NSNextResponder" ref="723335052"/>
@@ -2313,7 +2315,7 @@
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="662942643"/>
-							<int key="NSsFlags">133682</int>
+							<int key="NSsFlags">133810</int>
 							<reference key="NSVScroller" ref="34156082"/>
 							<reference key="NSHScroller" ref="130735854"/>
 							<reference key="NSContentView" ref="241636608"/>
@@ -4390,14 +4392,6 @@
 					<int key="connectionID">786</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">initialFirstResponder</string>
-						<reference key="source" ref="972006081"/>
-						<reference key="destination" ref="1050687191"/>
-					</object>
-					<int key="connectionID">787</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: alarmDate</string>
 						<reference key="source" ref="449615675"/>
@@ -4432,6 +4426,22 @@
 						<reference key="destination" ref="301281318"/>
 					</object>
 					<int key="connectionID">791</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">eventController</string>
+						<reference key="source" ref="163245114"/>
+						<reference key="destination" ref="71182052"/>
+					</object>
+					<int key="connectionID">793</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">initialFirstResponder</string>
+						<reference key="source" ref="972006081"/>
+						<reference key="destination" ref="1050687191"/>
+					</object>
+					<int key="connectionID">794</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -7042,7 +7052,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">792</int>
+			<int key="maxID">794</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
